--- a/src/ng-vcl/date-picker/time-picker.component.html
+++ b/src/ng-vcl/date-picker/time-picker.component.html
@@ -9,7 +9,7 @@
         <button type="button" class="vclButton vclTransparent vclSquare" (click)="onSwitch24h()" style="height: 100%">12h</button>
       </div>
       <div class="vclDGRow" role="row" *ngFor="let i of [0, 1, 2, 3]">
-        <div class="vclDGCell vclCalItem" role="option" *ngFor="let x of [0, 1, 2, 3, 4, 5]" [class.vclSelected]="isHourMarked(i * 6 + x)" (tap)="onHourTap(i * 6 + x)">{{ i * 6 + x }}</div>
+        <div class="vclDGCell vclCalItem" role="option" *ngFor="let x of [0, 1, 2, 3, 4, 5]" [class.vclSelected]="isHourMarked(i * 6 + x)" (click)="onHourTap(i * 6 + x)">{{ i * 6 + x }}</div>
       </div>
     </div>
     <div class="vclDataGrid vclDGVAlignMiddle vclDGAlignCentered vclCalendar vclCalInput" *ngIf="!displayHours24">
@@ -21,10 +21,10 @@
         <button type="button" class="vclButton vclTransparent vclSquare" (click)="onSwitch24h()" style="height: 100%">24h</button>
       </div>
       <div class="vclDGRow" role="row">
-        <div class="vclDGCell vclCalItem" role="option" *ngFor="let i of [12, 1, 2, 3, 4, 5]" [class.vclSelected]="isHourMarked(i % 12)" (tap)="onHourTap(i % 12)">{{ i }}</div>
+        <div class="vclDGCell vclCalItem" role="option" *ngFor="let i of [12, 1, 2, 3, 4, 5]" [class.vclSelected]="isHourMarked(i % 12)" (click)="onHourTap(i % 12)">{{ i }}</div>
       </div>
       <div class="vclDGRow" role="row">
-        <div class="vclDGCell vclCalItem" role="option" *ngFor="let i of [6, 7, 8, 9, 10, 11]" [class.vclSelected]="isHourMarked(i % 12)" (tap)="onHourTap(i % 12)">{{ i }}</div>
+        <div class="vclDGCell vclCalItem" role="option" *ngFor="let i of [6, 7, 8, 9, 10, 11]" [class.vclSelected]="isHourMarked(i % 12)" (click)="onHourTap(i % 12)">{{ i }}</div>
       </div>
       <div class="vclDGRow vclToolbar">
         <div class="vclDGCell">
@@ -32,10 +32,10 @@
         </div>
       </div>
       <div class="vclDGRow" role="row">
-        <div class="vclDGCell vclCalItem" role="option" *ngFor="let i of [12, 1, 2, 3, 4, 5]" [class.vclSelected]="isHourMarked(i % 12 + 12)" (tap)="onHourTap(i % 12 + 12)">{{ i }}</div>
+        <div class="vclDGCell vclCalItem" role="option" *ngFor="let i of [12, 1, 2, 3, 4, 5]" [class.vclSelected]="isHourMarked(i % 12 + 12)" (click)="onHourTap(i % 12 + 12)">{{ i }}</div>
       </div>
       <div class="vclDGRow" role="row">
-        <div class="vclDGCell vclCalItem" role="option" *ngFor="let i of [6, 7, 8, 9, 10, 11]" [class.vclSelected]="isHourMarked(i % 12 + 12)" (tap)="onHourTap(i % 12 + 12)">{{ i }}</div>
+        <div class="vclDGCell vclCalItem" role="option" *ngFor="let i of [6, 7, 8, 9, 10, 11]" [class.vclSelected]="isHourMarked(i % 12 + 12)" (click)="onHourTap(i % 12 + 12)">{{ i }}</div>
       </div>
     </div>
   </div>
@@ -48,7 +48,7 @@
         </div>
       </div>
       <div class="vclDGRow" role="row" *ngFor="let i of [0, 1, 2, 3, 4, 5]">
-        <div class="vclDGCell vclCalItem" role="option" *ngFor="let x of [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]" [class.vclSelected]="isMinuteMarked(i * 10 + x)" (tap)="onMinuteTap(i * 10 + x)">:{{ i * 10 + x }}</div>
+        <div class="vclDGCell vclCalItem" role="option" *ngFor="let x of [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]" [class.vclSelected]="isMinuteMarked(i * 10 + x)" (click)="onMinuteTap(i * 10 + x)">:{{ i * 10 + x }}</div>
       </div>
     </div>
   </div>
@@ -61,7 +61,7 @@
         </div>
       </div>
       <div class="vclDGRow" role="row" *ngFor="let i of [0, 1, 2, 3, 4, 5]">
-        <div class="vclDGCell vclCalItem" role="option" *ngFor="let x of [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]" [class.vclSelected]="isSecondMarked(i * 10 + x)" (tap)="onSecondTap(i * 10 + x)">:{{ i * 10 + x }}</div>
+        <div class="vclDGCell vclCalItem" role="option" *ngFor="let x of [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]" [class.vclSelected]="isSecondMarked(i * 10 + x)" (click)="onSecondTap(i * 10 + x)">:{{ i * 10 + x }}</div>
       </div>
     </div>
   </div>
