Fix clear search box  icon

--- a/demo/src/components/app/app.component.html
+++ b/demo/src/components/app/app.component.html
@@ -28,7 +28,7 @@
         <button vcl-button *ngIf="searchInput.value"
           (tap)="searchInput.value = ''; search('')" 
           class="vclButton vclTransparent vclSquare vclAppended"
-          appIcon="fa:times-circle"></button>
+          icon="fa:times-circle"></button>
       </div>
 
       <nav vcl-navigation class="vclScrollable vclYOnHover vclLayoutFlex"
