Make Over of Date Picker using latest Calendar/ Date Picker Stuff from VCL

--- a/demo/src/demos/date-picker/demo.component.html
+++ b/demo/src/demos/date-picker/demo.component.html
@@ -1,8 +1,8 @@
-<h3>Default Datepicker</h3>
+<h3>Default Date Picker</h3>
 <vcl-date-picker [(ngModel)]="selectedDate" style="width: 18em;"></vcl-date-picker>
 <span>Date: {{ selectedDate.toLocaleString() }}</span>
 
-<h3>Ranged Datepicker</h3>
+<h3>Ranged Date Picker</h3>
 <vcl-date-picker style="width: 18em;" 
                  [selectedDate]="selectedDate2" 
                  [selectedRangeEnd]="selectedRangeEnd" 
@@ -12,14 +12,14 @@
                  (change)="onChange($event)">
 </vcl-date-picker>
 
-<h3>Minimal Datepicker</h3>
+<h3>Minimal Date Picker</h3>
 <vcl-date-picker [displayJumpToday]="false"
                  [displayJumpSelected]="false"
                  [displayWeekNumbers]="false"
                  [displayWeekdays]="false">
 </vcl-date-picker>
 
-<h3>Default Timepicker</h3>
+<h3>Default Time Picker</h3>
 <vcl-date-picker [(ngModel)]="selectedDate3"
                  [displayDate]="false"
                  [displayTime]="true">
