--- a/src/ng-vcl/date-picker/date-picker.component.html
+++ b/src/ng-vcl/date-picker/date-picker.component.html
@@ -2,14 +2,14 @@
   <div class="vclDataGrid vclDGVAlignMiddle vclDGAlignCentered vclCalendar vclCalInput" style="min-width: 18em;" *ngIf="displayDate">
     <div class="vclDGRow">
       <div class="vclDGCell vclToolbar">
-        <div class=" vclLayoutFlex vclLayoutHorizontal vclLayoutJustified vclLayoutCenter" role="menubar" aria-level="1">
+        <div class="vclLayoutFlex vclLayoutHorizontal vclLayoutJustified vclLayoutCenter" role="menubar" aria-level="1">
           <button type="button" class="vclButton vclTransparent vclSquare" [disabled]="disabled" (click)="prevMonth()">
                 <div class="vclIcogram">
                   <div class="vclIcon fas fa-angle-left" aria-hidden="false" aria-label="previous" role="img"></div>
                 </div>
               </button>
           <span class="vclCalHeaderLabel" (click)="showYear()" [class.date-picker-pointer]="!showYearPick">
-            {{viewDate?.getMonthString()}}&nbsp;&nbsp;{{viewDate?.getYearString()}}
+            {{ viewDate?.getMonthString() }}&nbsp;&nbsp;{{ viewDate?.getYearString() }}
           </span>
             <button type="button" class="vclButton vclTransparent vclSquare" [disabled]="disabled" (click)="nextMonth()">
               <div class="vclIcogram">
@@ -23,21 +23,31 @@
       <ng-container *ngIf="!showYearPick">
         <div *ngIf="displayWeekNumbers || displayWeekdays" class="vclDGRow">
           <div *ngIf="displayWeekNumbers" class="vclDGCell vclCalItem vclOtherMonth">
-            {{'week'}}
+            {{ 'week' }}
           </div>
           <div *ngFor="let day of viewDate.getWeekDays()" class="vclDGCell vclWeekdayLabel">
             <ng-container *ngIf="displayWeekdays">
-              {{day}}
+              {{ day }}
             </ng-container>
           </div>
         </div>
 
-        <div class="vclDGRow" *ngFor="let week of viewDate.getMonthBlock()">
-          <div *ngIf="displayWeekNumbers && week.length==7" class="vclDGCell">
-            {{week[5].getWeekNumber()}}
+        <div class="vclDGRow" *ngFor="let week of viewDate.getMonthBlock(); index as w">
+          <div *ngIf="displayWeekNumbers && week.length == 7" class="vclDGCell">
+            {{ week[5].getWeekNumber() }}
           </div>
-          <div *ngFor="let day of week" class="vclDGCell vclCalItem" [class.vclDisabled]="disabled || isDayDisabled(day)" [class.vclOtherMonth]="!day.isSameMonthAndYear(viewDate)" [class.vclSelected]="isMarked(day)" (click)="onDateTap(day)" [class.vclToday]="highlightSelected && day.isToday()">
-            {{day.date.getDate()}}
+          <div *ngFor="let day of week; index as d"
+            [tabindex]="w * d"
+            class="vclDGCell vclCalItem {{ disabled || isDayDisabled(day) ? 'vclDisabled vclUnavailable' : 'vclAvailable' }}"
+            [class.vclToday]="highlightSelected && day.isToday()"
+            [class.vclOtherMonth]="!day.isSameMonthAndYear(viewDate)"
+            [class.vclDisabled]="disabled || isDayDisabled(day)"
+            [class.vclSelected]="isMarked(day)"
+            [class.vclSelectedAlt]="isMarked(day)"
+            [class.vclSelectedBeg]="isBeginning(day)"
+            [class.vclSelectedEnd]="isEnd(day)"
+            (click)="onDateTap(day)">
+            {{ day.date.getDate() }}
           </div>
         </div>
 
@@ -61,8 +71,11 @@
 
       <ng-container *ngIf="showYearPick">
         <div class="vclDGRow" role="row" *ngFor="let row of viewDate.getYearsBlock()">
-          <div *ngFor="let year of row" class="vclDGCell vclCalItem" role="gridcell" [class.vclSelected]="viewDate.date.getFullYear()==year" (click)="yearPickSelect(year)" [class.vclToday]="highlightSelected && today.isInYear(year)">
-            {{year}}
+          <div *ngFor="let year of row" class="vclDGCell vclCalItem" role="gridcell"
+            [class.vclSelected]="viewDate.date.getFullYear() == year"
+            [class.vclToday]="highlightSelected && today.isInYear(year)"
+            (click)="yearPickSelect(year)">
+            {{ year }}
           </div>
         </div>
       </ng-container>
@@ -74,6 +87,6 @@
                      [displayMinutes]="displayMinutes"
                      [displaySeconds]="displaySeconds"
                      [displayHours24]="displayHours24"
-                     [ngStyle]="{'margin-left': displayDate ? '10px' : 0}">
+                     [ngStyle]="{ 'margin-left': displayDate ? '10px' : 0 }">
     </vcl-time-picker>
 </div>
