--- a/src/ng-vcl/modal/modal.component.html
+++ b/src/ng-vcl/modal/modal.component.html
@@ -3,30 +3,22 @@
   <div class="vclLayer" role="dialog">
     <div class="vclLayerBox">
       <div [ngClass]="class" class="vclPanel vclPanelDialog vclNoMargin" role="dialog">
-          <div *ngIf="showClose || title" class="vclPanelHeader vclNoBg vclLayoutHorizontal vclLayoutJustified vclLayoutCenter">
-            <h3 class="vclPanelTitle">{{title}}</h3>
-            <button *ngIf="showClose" type="button" class="vclButton vclTransparent" (tap)="layerModal.close()" >
-              <div class="vclIcogram"><div class="vclIcon fa fa-times" aria-hidden="true" aria-label="Close" role="img"></div></div>
-            </button>
-          </div>
-          <div class="vclPanelBody">
-            <div class="vclPanelContent">
-              <ng-content></ng-content>
-            </div>
-          </div>
-          <div *ngIf="buttons" class="vclPanelFooter vclNoBg vclLayoutHorizontal vclLayoutJustified vclLayoutCenter">
-            <div></div>
-            <div class="vclLooseButtonGroup">
-              <ng-template ngFor let-iB [ngForOf]="buttons">
-                <button type="button" class="vclButton" [ngClass]="iB.class" (tap)="tapButton.emit(iB.onTap) ">
-                  <div class="vclIcogram">
-                    <span class="vclText">{{iB.label}}</span>
-                  </div>
-                </button>
-              </ng-template>
-            </div>
+        <div *ngIf="closeButton || title" class="vclPanelHeader vclNoBg vclLayoutHorizontal vclLayoutJustified vclLayoutCenter">
+          <h3 class="vclPanelTitle">{{title}}</h3>
+          <button *ngIf="closeButton" type="button" class="vclButton vclTransparent" (tap)="layerModal.close()" >
+            <div class="vclIcogram"><div class="vclIcon fa fa-times" aria-hidden="true" aria-label="Close" role="img"></div></div>
+          </button>
+        </div>
+        <div class="vclPanelBody">
+          <div class="vclPanelContent" *ngIf="bodyComponent != null">
+            <ng-content select="vcl-modal-body"></ng-content>
           </div>
         </div>
+        <div class="vclPanelFooter vclNoBg vclLayoutHorizontal vclLayoutJustified vclLayoutCenter" *ngIf="footerComponent != null">
+          <div></div>
+          <ng-content select="vcl-modal-footer"></ng-content>
+        </div>
+      </div>
     </div>
   </div>
 </ng-template>
