migrate from rawgit to jsdelivr

--- a/demo/src/components/app/app.component.html
+++ b/demo/src/components/app/app.component.html
@@ -2,7 +2,7 @@
   <header class="vclApplicationHeader vclLayoutHorizontal vclLayoutCenter vclLayoutJustified">
     <div role="banner">
       <a href="#" class="vclLayoutHorizontal vclLayoutCenter">
-        <img class="vclResponsiveImage vclLogo" role="presentation" src="https://cdn.rawgit.com/ng-vcl/ng-vcl/master/gfx/angular_vcl_logo_square.png">
+        <img class="vclResponsiveImage vclLogo" role="presentation" src="https://cdn.jsdelivr.net/gh/ng-vcl/ng-vcl/gfx/angular_vcl_logo_square.png">
         <h1 class="vclAppName">Angular VCL Demo Browser (v{{version}}<span *ngIf="gitBranch"> {{gitBranch}}</span>)</h1>
       </a>
     </div>
