[table] remove propertiest that can be controled by classes (top level modifiers)

--- a/demo/src/demos/table/demo.component.html
+++ b/demo/src/demos/table/demo.component.html
@@ -1,4 +1,4 @@
-<table vcl-table hover altrow vertical-border align-middle fixed>
+<table vcl-table class="vclFixed vclVAlignMiddle vclRowHoverHighlight vclAltRowColor" >
   <thead>
     <tr>
       <th [span]="50" sort (change)="OnSortingDefaultColumn($event)">
