Fix deprecations & linter errors

--- a/demo/app/demos/tooltip/demo.component.html
+++ b/demo/app/demos/tooltip/demo.component.html
@@ -22,7 +22,7 @@
   <div #hostContainer2 style="background-color:#BDBDBD;flex:0.25">
     <p>Custom tooltip with rich content</p>
     <vcl-tooltip [hostElement]="hostContainer2" placement="right">
-      <my-tooltip-sample></my-tooltip-sample>
+      <vcl-demo-my-tooltip-sample></vcl-demo-my-tooltip-sample>
     </vcl-tooltip>
   </div>
 </div>
